--- a/.github/workflows/daily-news.yml
+++ b/.github/workflows/daily-news.yml
@@ -1,31 +1,26 @@
-name: Daily Tech News Collection
+name: Daily Tech News Auto Publish
 
 on:
-  # 매일 오전 9시 (KST) = UTC 00:00 실행
   schedule:
-    - cron: '0 0 * * *'
+    # 매일 오전 10시 KST = UTC 01:00
+    - cron: '0 1 * * *'
   
-  # 수동 실행 지원
   workflow_dispatch:
     inputs:
       hours:
         description: 'Hours to look back for news'
         required: false
         default: '24'
-      sources:
-        description: 'Comma-separated list of sources (leave empty for all)'
+      dry_run:
+        description: 'Dry run (preview only)'
         required: false
-        default: ''
-      use_ai:
-        description: 'Use AI for summary generation'
-        required: false
-        default: 'true'
+        default: 'false'
         type: choice
         options:
           - 'true'
           - 'false'
-      max_posts:
-        description: 'Maximum number of posts to generate'
+      max_news:
+        description: 'Maximum news items to include'
         required: false
         default: '10'
 
@@ -33,18 +28,18 @@ env:
   PYTHON_VERSION: '3.11'
 
 jobs:
-  collect-news:
+  collect-and-publish:
     runs-on: ubuntu-latest
     
     permissions:
       contents: write
-      pull-requests: write
     
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
       
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -55,121 +50,110 @@ jobs:
       - name: Install dependencies
         run: |
           pip install --upgrade pip
-          pip install feedparser requests beautifulsoup4 python-frontmatter google-generativeai PyYAML
+          pip install feedparser requests beautifulsoup4 python-frontmatter PyYAML
       
-      - name: Create data directory
-        run: mkdir -p _data _drafts
+      - name: Create directories
+        run: mkdir -p _data _posts assets/images
       
-      - name: Collect tech news
+      - name: Collect tech news from RSS
         run: |
           HOURS="${{ github.event.inputs.hours || '24' }}"
-          SOURCES="${{ github.event.inputs.sources || '' }}"
-          
-          CMD="python3 scripts/collect_tech_news.py --hours $HOURS --filter-processed"
-          
-          if [ -n "$SOURCES" ]; then
-            CMD="$CMD --sources $SOURCES"
-          fi
-          
-          echo "Running: $CMD"
-          $CMD
+          echo "Collecting news from last $HOURS hours..."
+          python3 scripts/collect_tech_news.py --hours $HOURS
       
-      - name: Generate draft posts
-        env:
-          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+      - name: Check collected news
+        id: check_news
         run: |
-          USE_AI="${{ github.event.inputs.use_ai || 'true' }}"
-          MAX_POSTS="${{ github.event.inputs.max_posts || '10' }}"
-          
-          CMD="python3 scripts/generate_news_draft.py --max-posts $MAX_POSTS"
-          
-          if [ "$USE_AI" = "true" ] && [ -n "$GEMINI_API_KEY" ]; then
-            CMD="$CMD --use-ai"
-          fi
-          
-          echo "Running: $CMD"
-          $CMD
-      
-      - name: Check for new drafts
-        id: check_drafts
-        run: |
-          DRAFT_COUNT=$(find _drafts -name "*.md" -type f -mmin -10 | wc -l)
-          echo "draft_count=$DRAFT_COUNT" >> $GITHUB_OUTPUT
-          
-          if [ "$DRAFT_COUNT" -gt 0 ]; then
-            echo "Found $DRAFT_COUNT new drafts"
-            echo "has_drafts=true" >> $GITHUB_OUTPUT
+          if [ -f "_data/collected_news.json" ]; then
+            TOTAL=$(python3 -c "import json; d=json.load(open('_data/collected_news.json')); print(d.get('total_items', 0))")
+            echo "news_count=$TOTAL" >> $GITHUB_OUTPUT
+            echo "Collected $TOTAL news items"
+            
+            if [ "$TOTAL" -ge 5 ]; then
+              echo "has_enough_news=true" >> $GITHUB_OUTPUT
+            else
+              echo "has_enough_news=false" >> $GITHUB_OUTPUT
+              echo "Not enough news to publish (minimum: 5)"
+            fi
           else
-            echo "No new drafts generated"
-            echo "has_drafts=false" >> $GITHUB_OUTPUT
+            echo "news_count=0" >> $GITHUB_OUTPUT
+            echo "has_enough_news=false" >> $GITHUB_OUTPUT
+            echo "No news collected"
           fi
       
-      - name: Create Pull Request
-        if: steps.check_drafts.outputs.has_drafts == 'true'
-        uses: peter-evans/create-pull-request@v6
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          commit-message: 'chore: add daily tech news drafts'
-          title: '📰 Daily Tech News Drafts - ${{ github.run_number }}'
-          body: |
-            ## 🤖 자동 생성된 뉴스 초안
-            
-            이 PR은 자동으로 수집된 기술/보안 뉴스를 기반으로 생성된 블로그 초안입니다.
-            
-            ### 📋 검토 체크리스트
-            
-            - [ ] 초안 내용 검토
-            - [ ] 필요시 제목/내용 수정
-            - [ ] 카테고리/태그 확인
-            - [ ] 이미지 추가 (필요시)
-            - [ ] `draft: true` 제거 후 `_posts/`로 이동
-            
-            ### 📁 생성된 초안
-            
-            `_drafts/` 폴더에서 확인하세요.
-            
-            ### ⚙️ 워크플로우 정보
-            
-            - **실행 번호**: ${{ github.run_number }}
-            - **트리거**: ${{ github.event_name }}
-            - **시간 범위**: ${{ github.event.inputs.hours || '24' }}시간
-            
-            ---
-            
-            > 이 PR은 GitHub Actions에 의해 자동 생성되었습니다.
-          branch: drafts/daily-news-${{ github.run_number }}
-          delete-branch: true
-          labels: |
-            automated
-            news-draft
-            needs-review
+      - name: Auto publish news post
+        if: steps.check_news.outputs.has_enough_news == 'true'
+        run: |
+          DRY_RUN="${{ github.event.inputs.dry_run || 'false' }}"
+          MAX_NEWS="${{ github.event.inputs.max_news || '10' }}"
+          HOURS="${{ github.event.inputs.hours || '24' }}"
+          
+          CMD="python3 scripts/auto_publish_news.py --hours $HOURS --max-news $MAX_NEWS"
+          
+          if [ "$DRY_RUN" = "true" ]; then
+            CMD="$CMD --dry-run"
+          fi
+          
+          echo "Running: $CMD"
+          $CMD
+      
+      - name: Check for new post
+        id: check_post
+        if: steps.check_news.outputs.has_enough_news == 'true'
+        run: |
+          TODAY=$(date +%Y-%m-%d)
+          POST_FILE="_posts/${TODAY}-Tech_Security_Weekly_Digest.md"
+          
+          if [ -f "$POST_FILE" ]; then
+            echo "post_created=true" >> $GITHUB_OUTPUT
+            echo "post_file=$POST_FILE" >> $GITHUB_OUTPUT
+            echo "Post created: $POST_FILE"
+          else
+            echo "post_created=false" >> $GITHUB_OUTPUT
+            echo "No post created"
+          fi
+      
+      - name: Commit and push
+        if: steps.check_post.outputs.post_created == 'true' && github.event.inputs.dry_run != 'true'
+        run: |
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          
+          TODAY=$(date +%Y-%m-%d)
+          
+          git add _posts/*.md assets/images/*.svg _data/collected_news.json
+          
+          if git diff --staged --quiet; then
+            echo "No changes to commit"
+          else
+            git commit -m "feat: auto publish daily news digest - $TODAY"
+            git push
+            echo "Changes committed and pushed"
+          fi
       
       - name: Summary
         run: |
-          echo "## 📰 Daily News Collection Summary" >> $GITHUB_STEP_SUMMARY
+          echo "## 📰 Daily News Auto Publish Summary" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
+          echo "- **Date**: $(date +%Y-%m-%d)" >> $GITHUB_STEP_SUMMARY
+          echo "- **News Collected**: ${{ steps.check_news.outputs.news_count }}" >> $GITHUB_STEP_SUMMARY
           
-          if [ -f "_data/collected_news.json" ]; then
-            TOTAL=$(jq '.total_items' _data/collected_news.json)
-            echo "- **수집된 뉴스**: $TOTAL 건" >> $GITHUB_STEP_SUMMARY
+          if [ "${{ steps.check_post.outputs.post_created }}" = "true" ]; then
+            echo "- **Status**: ✅ Post published successfully" >> $GITHUB_STEP_SUMMARY
+            echo "- **File**: \`${{ steps.check_post.outputs.post_file }}\`" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "- **Status**: ⏭️ Skipped (not enough news or dry run)" >> $GITHUB_STEP_SUMMARY
           fi
           
-          DRAFT_COUNT=$(find _drafts -name "*.md" -type f 2>/dev/null | wc -l)
-          echo "- **생성된 초안**: $DRAFT_COUNT 건" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          
-          if [ "$DRAFT_COUNT" -gt 0 ]; then
-            echo "### 생성된 파일" >> $GITHUB_STEP_SUMMARY
-            echo "" >> $GITHUB_STEP_SUMMARY
-            find _drafts -name "*.md" -type f | while read f; do
-              echo "- \`$(basename $f)\`" >> $GITHUB_STEP_SUMMARY
-            done
-          fi
+          echo "### Configuration" >> $GITHUB_STEP_SUMMARY
+          echo "- Hours lookback: ${{ github.event.inputs.hours || '24' }}" >> $GITHUB_STEP_SUMMARY
+          echo "- Max news: ${{ github.event.inputs.max_news || '10' }}" >> $GITHUB_STEP_SUMMARY
+          echo "- Dry run: ${{ github.event.inputs.dry_run || 'false' }}" >> $GITHUB_STEP_SUMMARY
 
-  # 매주 월요일에 뉴스 소스 상태 체크
-  check-sources:
+  weekly-source-check:
     runs-on: ubuntu-latest
-    if: github.event_name == 'schedule' && github.event.schedule == '0 0 * * 1'
+    if: github.event_name == 'schedule' && github.event.schedule == '0 1 * * 1'
     
     steps:
       - name: Checkout repository
@@ -183,7 +167,7 @@ jobs:
       - name: Install dependencies
         run: pip install feedparser requests
       
-      - name: Check RSS feed status
+      - name: Check RSS feed health
         run: |
           python3 -c "
           import sys
@@ -191,9 +175,12 @@ jobs:
           from collect_tech_news import NEWS_SOURCES
           import feedparser
           
-          print('Checking RSS feed status...\n')
+          print('🔍 Checking RSS feed status...')
+          print('=' * 50)
           
+          ok_count = 0
           failed = []
+          
           for key, config in NEWS_SOURCES.items():
               feed_url = config.get('feed_url', '')
               if not feed_url:
@@ -202,18 +189,20 @@ jobs:
               try:
                   feed = feedparser.parse(feed_url)
                   if feed.bozo and not feed.entries:
-                      failed.append((key, config['name'], str(feed.bozo_exception)))
-                      print(f'❌ {config[\"name\"]}: Failed')
+                      failed.append((key, config['name'], str(feed.bozo_exception)[:50]))
+                      print(f'❌ {config[\"name\"]}')
                   else:
-                      print(f'✅ {config[\"name\"]}: OK ({len(feed.entries)} entries)')
+                      ok_count += 1
+                      print(f'✅ {config[\"name\"]} ({len(feed.entries)} entries)')
               except Exception as e:
-                  failed.append((key, config['name'], str(e)))
-                  print(f'❌ {config[\"name\"]}: Error - {e}')
+                  failed.append((key, config['name'], str(e)[:50]))
+                  print(f'❌ {config[\"name\"]}: {str(e)[:30]}')
           
-          print(f'\n{len(NEWS_SOURCES) - len(failed)}/{len(NEWS_SOURCES)} sources OK')
+          print('=' * 50)
+          print(f'Summary: {ok_count}/{len(NEWS_SOURCES)} sources OK')
           
           if failed:
-              print('\nFailed sources:')
+              print('\\nFailed sources:')
               for key, name, error in failed:
                   print(f'  - {name}: {error}')
           "
